# Prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: database.py  deps.py  main.py  models.py
backend/app/routers/: auth.py  catalog.py  chat.py  documents.py
backend/app/schemas/: chat.py  documents.py  nda.py
backend/app/services/: catalog.py  document_registry.py  llm.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_chat.py  test_document_registry.py  test_documents.py
frontend/: TESTING.md  jest.config.js  jest.config.ts  next.config.ts  package-lock.json  package.json
frontend/__mocks__/@react-pdf/: renderer.ts
frontend/__tests__/components/: NdaForm.test.tsx  NdaPreview.test.tsx
frontend/__tests__/lib/: documentTypes.test.ts  ndaTemplate.test.ts  ndaTypes.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: NdaForm.tsx  NdaPdfDocument.tsx  NdaPreview.tsx
frontend/components/ui/: button.tsx  input.tsx  radio-group.tsx  textarea.tsx
frontend/lib/: ndaTemplate.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentDownloadButton.tsx  DocumentPreview.tsx  MyDocumentsModal.tsx  NDADocument.tsx  NDADownloadButton.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/src/lib/: api.ts  documentTypes.ts  ndaTypes.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
(+5 files in other folders)
